# s3-tools

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  requirements.txt
app/: report.py  snapshot.py
